# AU-Cengaver-Robotic

./: .gitignore  README.md
au-cengaver-robotaksi/ros2_ws/src/controller_msgs/msg/: ActiveRouteContext.msg  Trajectory.msg
au-cengaver-robotaxi/docs/contracts/: Localization_Planner_Contract_v1.2.docx  Perception_Planner_FSM_v1.4_FINAL.docx  Planner_Controller_Contract_v1.3.docx
au-cengaver-robotaxi/ros2_ws/src/cengaver_controller/: package.xml  setup.cfg  setup.py
au-cengaver-robotaxi/ros2_ws/src/cengaver_controller/cengaver_controller/: ackermann_model.py  can_interface.py  controller_feedback_node.py  controller_node.py  emergency_stop.py
au-cengaver-robotaxi/ros2_ws/src/cengaver_controller/config/: vehicle_params.yaml
au-cengaver-robotaxi/ros2_ws/src/cengaver_controller/launch/: controller.launch.py
au-cengaver-robotaxi/ros2_ws/src/common_msgs/: package.xml
au-cengaver-robotaxi/ros2_ws/src/common_msgs/msg/: AutonomyMode.msg  StopReason.msg
au-cengaver-robotaxi/ros2_ws/src/controller/: package.xml
au-cengaver-robotaxi/ros2_ws/src/controller/controller/: controller_node.py
au-cengaver-robotaxi/ros2_ws/src/fsm/: package.xml  setup.py
au-cengaver-robotaxi/ros2_ws/src/fsm/fsm/: __init__.py  fsm_node.py  mode_manager.py
au-cengaver-robotaxi/ros2_ws/src/fsm/launch/: fsm.launch.py
au-cengaver-robotaxi/ros2_ws/src/fsm/test/: __init__.py  test_fsm_scenarios.py  test_fsm_unit.py
au-cengaver-robotaxi/ros2_ws/src/fsm_msgs/: CMakeLists.txt  package.xml
au-cengaver-robotaxi/ros2_ws/src/fsm_msgs/msg/: CurrentMode.msg  FSMEvent.msg  MissionState.msg
au-cengaver-robotaxi/ros2_ws/src/localization/: package.xml  setup.py
au-cengaver-robotaxi/ros2_ws/src/localization/launch/: localization.launch.py
au-cengaver-robotaxi/ros2_ws/src/perception/: package.xml  setup.py
au-cengaver-robotaxi/ros2_ws/src/perception/perception/: colour_classifier.py  fake_pointcloud_pub.py  fake_traffic_light_state_pub.py  junction_node.py  lane_node.py  route_context_utils.py  temporal_filter.py
au-cengaver-robotaxi/ros2_ws/src/perception/test/: test_centroid_tracker.py  test_colour_classifier.py  test_lane_detector.py  test_lidar_obstacle_pipeline.py  test_pointcloud_utils.py  test_route_context_utils.py  test_stale_threshold.py  test_traffic_light_temporal.py
au-cengaver-robotaxi/ros2_ws/src/perception_msgs/: CMakeLists.txt  package.xml
au-cengaver-robotaxi/ros2_ws/src/perception_msgs/msg/: Junction.msg  LaneModel.msg  ObstacleTrack.msg  ObstacleTracks.msg  PerceptionDiagnostics.msg  StopTarget.msg  TrafficLightState.msg  TrafficSign.msg  TrafficSigns.msg
au-cengaver-robotaxi/ros2_ws/src/planning/: package.xml  setup.py
au-cengaver-robotaxi/ros2_ws/src/planning/launch/: planning.launch.py
au-cengaver-robotaxi/ros2_ws/src/planning/planning/: coordinate_transform.py  geojson_loader.py  init.py  mode_handler.py  obstacle_decision.py  parking_planner.py  planner_node.py  route_context_publisher.py  speed_profile.py  stop_decision.py  timeout_checker.py  trajectory_builder.py  utils.py  waypoint_manager.py
au-cengaver-robotaxi/ros2_ws/src/planning_msgs/: CMakeLists.txt  package.xml
config/: vehicle_params.yaml
docs/contracts/: FSM_Planner_Contract_v1.1.docx
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/fake_publishers/share/fake_publishers/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/fsm/share/fsm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/common_msgs/: CMakeLists.txt
ros2_ws/src/controller/cengaver_controller/: controller_feedback_node.py  stanley_controller.py
ros2_ws/src/controller_msgs/msg/: ControllerFeedback.msg
ros2_ws/src/fake_publishers/: package.xml  setup.cfg  setup.py
ros2_ws/src/fake_publishers/fake_publishers/: fake_controller_feedback.py  gazebo_odom_localization_bridge.py  trajectory_to_cmdvel.py
ros2_ws/src/fake_publishers/launch/: gazebo_real_odom_system.launch.py  mvp_fake_system.launch.py
ros2_ws/src/fsm/: setup.cfg
ros2_ws/src/fsm/fsm/: event_handler.py  fsm_node.py  mission_state_manager.py
ros2_ws/src/fsm_msgs/: CMakeLists.txt
ros2_ws/src/localization/: setup.py
ros2_ws/src/localization/localization/: global_localization_node.py
ros2_ws/src/localization_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/perception/perception/: centroid_tracker.py  colour_classifier.py  dummy_common.py  fake_route_context_pub.py  stale_utils.py  stop_target_node.py  traffic_light_node.py
ros2_ws/src/perception/test/: test_lane_contract.py  test_lane_image.py  test_lidar_cluster_utils.py  test_route_context_apply_utils.py  test_stop_target_policy.py  test_ttc_utils.py
ros2_ws/src/perception_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/perception_msgs/msg/: LaneModel.msg
ros2_ws/src/planning/: setup.cfg  setup.py
ros2_ws/src/planning/planning/: __init__.py  trajectory_builder.py  utils.py
ros2_ws/src/planning_msgs/: CMakeLists.txt
ros2_ws/src/planning_msgs/msg/: ActiveRouteContext.msg
ros2_ws/src/simulation/: CMakeLists.txt  package.xml
ros2_ws/src/simulation/launch/: gazebo.launch.py
ros2_ws/src/simulation/urdf/: bee1.urdf  bee1.urdf.xacro
wiki/: index.md  log.md
wiki/architecture/: active_route_context.md  system_overview.md  team_roles.md  tf_standard.md
wiki/contracts/: message_contracts.md  perception_planner_fsm_contract.md  test_contract.md  timing_and_fallback.md
wiki/implementation/: milestones.md  perception_sprint_plan.md  sprint1_traffic_light_smoke_checklist.md  sprint2_lane_track_a_smoke_checklist.md  sprint2_lidar_track_b_smoke_checklist.md  sprint2_perception_kickoff.md  sprint3_perception_integration_kickoff.md
wiki/perception/: junction_node.md  lane_node.md  lidar_obstacle_node.md  perception_diagnostics_node.md  perception_overview.md  stop_target_node.md  traffic_light_node.md  traffic_sign_node.md
wiki/ros2/: ros2_foxy_notes.md
wiki/vehicle/: bee1_platform.md  canbus_interface.md
(+366 files in other folders)
