<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>cengaver_controller</name>
  <version>1.0.0</version>
  <description>
    AU Cengaver Robotics — TEKNOFEST 2026
    Controller paketi: Stanley/Pure Pursuit, Hibrit PID,
    Ackermann kinematik model, CAN-Bus 0x560 arayüzü,
    Emergency stop yönetimi ve controller feedback node.
  </description>

  <!-- Geliştirici -->
  <maintainer email="muhammed.durmaz@ankara.edu.tr">Muhammed Durmaz</maintainer>

  <!-- Lisans -->
  <license>MIT</license>

  <!-- Build aracı -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 temel bağımlılıklar -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Msg paketleri -->
  <depend>planning_msgs</depend>
  <depend>common_msgs</depend>
  <depend>fsm_msgs</depend>
  <!-- <depend>controller_msgs</depend> -->

  <!-- Test bağımlılıkları -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
