<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>0.1.0</version>
  <description>
    Sprint 1–3 MVP perception runtime package for AU Cengaver Robotics TEKNOFEST 2026
    Robotaksi. Includes traffic_light_node, lane_node, lidar_obstacle_node,
    stop_target_node, and supporting ROS-free helpers and fake publishers.
    Publishes evidence only — no driving decisions or control topics.
  </description>
  <maintainer email="yusufaydinau@gmail.com">AU Cengaver Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>perception_msgs</exec_depend>
  <exec_depend>planning_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
