<?xml version="1.0"?>
<package format="3">
  <name>planning</name>
  <version>0.0.1</version>
  <description>AU Cengaver Robotics — Planning paketi</description>
  <maintainer email="cengaver@example.com">Ahmet Salih Uluşık</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>common_msgs</depend>
  <depend>planning_msgs</depend>
  <depend>localization_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>fsm_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>