<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fsm</name>
  <version>1.0.0</version>
  <description>AU Cengaver FSM — durum makinesi node</description>

  <maintainer email="murat@cengaver.com">Murat Üsame Üstün</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!--
    Bağımlılıklar — bu paketler olmadan fsm çalışmaz.
    Hepsi önce build edilmiş olmalı.
  -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>common_msgs</depend>
  <depend>fsm_msgs</depend>
  <depend>planning_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>localization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
